; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/extr_xsysace.c_ace_fsm_yield.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/extr_xsysace.c_ace_fsm_yield.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ace_device = type { i64, i32, i32 }

@.str = private unnamed_addr constant [17 x i8] c"ace_fsm_yield()\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ace_device*)* @ace_fsm_yield to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ace_fsm_yield(%struct.ace_device* %0) #0 {
  %2 = alloca %struct.ace_device*, align 8
  store %struct.ace_device* %0, %struct.ace_device** %2, align 8
  %3 = load %struct.ace_device*, %struct.ace_device** %2, align 8
  %4 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @dev_dbg(i32 %5, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %7 = load %struct.ace_device*, %struct.ace_device** %2, align 8
  %8 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %7, i32 0, i32 1
  %9 = call i32 @tasklet_schedule(i32* %8)
  %10 = load %struct.ace_device*, %struct.ace_device** %2, align 8
  %11 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  ret void
}

declare dso_local i32 @dev_dbg(i32, i8*) #1

declare dso_local i32 @tasklet_schedule(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
